
- #9259: Made `Ephemeron.blit_key` and `Weak.blit` faster. They are now
  linear in the size of the range being copied instead of depending on the
  total sizes of the ephemerons or weak arrays involved.
  (Arseniy Alekseyev, design advice by Leo White, review by François Bobot
  and Damien Doligez)

- #9279: Memprof optimisation.
  (Stephen Dolan, review by Jacques-Henri Jourdan)

- #9316: Use typing information from Clambda for mutable Cmm variables.
  (Stephen Dolan, review by Vincent Laviron, Guillaume Bury and Xavier Leroy)

### Code generation and optimizations:

- #8637, #8805, #9247, #9296: Record debug info for each allocation.
  (Stephen Dolan and Jacques-Henri Jourdan, review by Damien Doligez,
   KC Sivaramakrishnan and Xavier Leroy)

- #9193: Make tuple matching optimisation apply to Lswitch and Lstringswitch.
  (Stephen Dolan, review by Thomas Refis and Gabriel Scherer)

### Standard library:

- #9077: Add Seq.cons and Seq.append
  (Sébastien Briais, review by Yawar Amin and Florian Angeletti)

- #9248: Add Printexc.default_uncaught_exception_handler
  (Raphael Sousa Santos, review by Daniel Bünzli)

- #9235: Add Array.exists2 and Array.for_all2
  (Bernhard Schommer, review by Armaël Guéneau)

- #9226: Add Seq.unfold.
   (Jeremy Yallop, review by Hezekiah M. Carty, Gabriel Scherer and
   Gabriel Radanne)

- #8771: Lexing: add set_position and set_filename to change (fake)
   the initial tracking position of the lexbuf.
   (Konstantin Romanov, Miguel Lumapat, review by Gabriel Scherer,
    Sébastien Hinderer, and David Allsopp)

- #9059: Added List.filteri function, same as List.filter but
  with the index of the element.
  (Léo Andrès, review by Alain Frisch)

- #8894: Added List.fold_left_map function combining map and fold.
  (Bernhard Schommer, review by Alain Frisch and github user @cfcs)

- #9237: `Format.pp_update_geometry ppf (fun geo -> {geo with ...})`
  for formatter geometry changes that are robust to new geometry fields.